--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registry</title>
-  <link rel="stylesheet" href="/css/jass.css">
+  <title>BYO BackPack</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
       {{else}}
       <a href="/login">login</a>
       <a href="/signup">SignUp</a>
-   
+
     </nav>
     {{/if}}
   </header>
@@ -28,7 +29,6 @@
   <footer>
 
   </footer>
-  
   {{#if user.logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
