--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,16 @@
-
-<button class="btn btn-primary login" >Log in</button>
+<h2>Login</h2>
+<form action="" id="login" class="mb-3">
+    <div class="row">
+        <div class="col">
+            <input type="text" placeholder="username" id="loginUsername" class="form-control">
+        </div>
+        <div class="col">
+            <input type="password" placeholder="password" id="loginPassword" class="form-control">
+        </div>
+        <div class="col">
+            <button class="btn btn-dark">Login!</button>
+        </div>
+    </div>
+</form>
 
 <script src="/js/login.js"></script>
