--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,2 +1,15 @@
-<button class="btn btn-primary signup" >Sign up</button>
+<h2>Signup</h2>
+<form action="" id="signup" class="mb-3">
+    <div class="row">
+        <div class="col">
+            <input type="text" placeholder="username" id="signupUsername" class="form-control">
+        </div>
+        <div class="col">
+            <input type="password" placeholder="password" id="signupPassword" class="form-control">
+        </div>
+        <div class="col">
+            <button class="btn btn-dark">Signup!</button>
+        </div>
+    </div>
+</form>
 <script src="/js/signup.js"></script>
