--- a/views/test.html
+++ b/views/test.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BYO Backpack</title>
+    <title>BYO BackPack</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
@@ -38,7 +38,7 @@
     </header>
 
     <main class="container container-fluid mt-5">
-      {{{body}}}
+        {{{body}}}
     </main>
 
     <footer>
