added createEvent Javascript page and increased server limit

--- a/views/createEvent.handlebars
+++ b/views/createEvent.handlebars
@@ -24,7 +24,7 @@
                     </div>
                     <div class="col">
                         <label for="startTime" class="form-label">Start Time</label>
-                        <input type="text" class="form-control" placeholder="" aria-label="startTime" id="startTime">
+                        <input type="text" class="form-control" placeholder="" aria-label="startTime" id="startDate">
                     </div>
                 </div>
 
