--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,11 +25,11 @@
                         <a class="nav-link" href="/profile">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">Logout</a>
+                        <a class="nav-link" href="/logout">Logout</a>
                     </li>
                     {{else}}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="/login">Login</a>
                     </li>
                     {{/if}}
                 </ul>
