created handlebars template for signup page

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,15 +1,22 @@
-<h2>Signup</h2>
-<form action="" id="signup" class="mb-3">
-    <div class="row">
-        <div class="col">
-            <input type="text" placeholder="username" id="signupUsername" class="form-control">
-        </div>
-        <div class="col">
-            <input type="password" placeholder="password" id="signupPassword" class="form-control">
-        </div>
-        <div class="col">
-            <button class="btn btn-dark">Signup!</button>
+<div class="row d-flex justify-content-center">
+    <div class="card col-12 col-md-5 col-lg-4 my-5 mx-5">
+        <div class="card-body">
+            <h2 class="card-title  mt-3 mb-4 text-center">Sign Up</h2>
+            <form>
+                <div class="form-floating my-3">
+                    <input type="username" class="form-control" id="signupUsername" placeholder="Username">
+                    <label for="floatingInput">Username</label>
+                </div>
+                <div class="form-floating">
+                    <input type="password" class="form-control" id="signupPassword" placeholder="Password">
+                    <label for="floatingPassword">Password</label>
+                </div>
+                <div class="d-grid gap-2 my-3">
+                    <button type="button" class="btn btn-dark" id="signupBtn">Log In</button>
+                </div>
+            </form>
         </div>
     </div>
-</form>
+</div>
+
 <script src="/js/signup.js"></script>
