--- a/views/test.html
+++ b/views/test.html
@@ -43,18 +43,18 @@
         <div class="row d-flex justify-content-center">
             <div class="card col-12 col-md-5 col-lg-4 my-5 mx-5">
                 <div class="card-body">
-                    <h2 class="card-title  mt-3 mb-4 text-center">Log In</h2>
+                    <h2 class="card-title  mt-3 mb-4 text-center">Sign Up</h2>
                     <form>
                         <div class="form-floating my-3">
-                            <input type="username" class="form-control" id="loginUsername" placeholder="Username">
+                            <input type="username" class="form-control" id="signupUsername" placeholder="Username">
                             <label for="floatingInput">Username</label>
                         </div>
                         <div class="form-floating">
-                            <input type="password" class="form-control" id="loginPassword" placeholder="Password">
+                            <input type="password" class="form-control" id="signupPassword" placeholder="Password">
                             <label for="floatingPassword">Password</label>
                         </div>
                         <div class="d-grid gap-2 my-3">
-                            <button type="button" class="btn btn-dark" id="loginBtn">Log In</button>
+                            <button type="button" class="btn btn-dark" id="signupBtn">Log In</button>
                         </div>
                     </form>
                 </div>
