--- a/views/eventbyid.handlebars
+++ b/views/eventbyid.handlebars
@@ -7,7 +7,7 @@
 <p>{{comment}}</p>
 <p>{{item_name}} ---
     {{#unless user.user_name}}
-    <button class="btn btn-secondary brgBtn" itemId={{id}}>I got this</button>
+    <button class="btn btn-secondary brgBtn" value={{id}}>I got this</button>
     {{else}}
     {{user.user_name}}
     {{/unless}}
@@ -17,8 +17,8 @@
 
 <hr>
 
-{{#if logged_in}}
-<button class="btn btn-dark" id="rsvpBtn" eventId={{id}}>RSVP</button>
+{{#if user.logged_in}}
+<button class="btn btn-dark" id="rsvpBtn" value={{id}}>RSVP</button>
 {{/if}}
 
 <script src="/js/eventbyid.js"></script>
