--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
                 <a class="navbar-brand" href="#">BYO Backpack</a>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     {{#if user.logged_in}}
                     <li class="nav-item">
@@ -44,9 +44,6 @@
     <footer>
 
     </footer>
-    {{#if user.logged_in}}
-    <script src="/js/logout.js"></script>
-    {{/if}}
 </body>
 
 </html>
