--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
     <div class="card col-12 col-md-5 col-lg-4 my-5 mx-5">
         <div class="card-body">
             <h2 class="card-title  mt-3 mb-4 text-center">Log In</h2>
-            <form id="login">
+            <form>
                 <div class="form-floating my-3">
                     <input type="username" class="form-control" id="loginUsername" placeholder="Username">
                     <label for="floatingInput">Username</label>
@@ -12,7 +12,7 @@
                     <label for="floatingPassword">Password</label>
                 </div>
                 <div class="d-grid gap-2 my-3">
-                    <button class="btn btn-dark" id="loginBtn">Log In</button>
+                    <button type="button" class="btn btn-dark" id="loginBtn">Log In</button>
                 </div>
             </form>
         </div>
@@ -20,3 +20,4 @@
 </div>
 
 <script src="/js/login.js"></script>
+
