updated handlebars templates

--- a/views/eventDetails.handlebars
+++ b/views/eventDetails.handlebars
@@ -1,7 +1,7 @@
 <div class="row d-flex justify-content-center">
     <div class="card col-12 my-5">
         <div class="card-body">
-            <h2 class="card-title my-4 text-center">Event Name</h2>
+            <h2 class="card-title my-4 text-center">{{event_name}}</h2>
             <div class="row pt-1">
                 <div class="col d-flex justify-content-end">
                     <img src="http://placekitten.com/500/400" alt="">
@@ -16,7 +16,7 @@
                     <h5>Details:</h5>
                     <p>{{description}}</p>
                     <h5>Event Host:</h5>
-                    <p>{{creator_id}}</p>
+                    <p>{{creator.user_name}}</p>
                 </div>
             </div>
             <div class="row my-5">
