--- a/views/test.html
+++ b/views/test.html
@@ -38,7 +38,18 @@
     </header>
 
     <main class="container container-fluid mt-5">
-
+        <div class="row">
+            <h1>Upcoming Events</h1>
+        </div>
+        <div class="row d-flex justify-content-center my-4">
+            <div class="card col-12">
+                <div class="card-body">
+                  <h5 class="card-title">{{event_name}}</h5>
+                  <p class="card-text">Date of Creation</p>
+                  <a href="#" class="btn btn-dark">Read More</a>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
