--- a/views/updateEvent.handlebars
+++ b/views/updateEvent.handlebars
@@ -1,16 +1,16 @@
 <div class="row mt-5">
-    <h1>Welcome, {{username}}!</h1>
+    <h1>Welcome, {{user.user_name}}!</h1>
     <div class="card col-12 my-5">
         <div class="card-body">
             <h2 class="card-title  mt-2 mb-3">Create a New Event</h2>
             <form>
                 <div class="mb-3">
                     <label for="eventName" class="form-label">Event Name</label>
-                    <input class="form-control" id="eventName" placeholder="Beach Bonfire">
+                    <input class="form-control" id="eventName" value="{{eventUpdate.event_name}}">
                 </div>
                 <div class="mb-3">
                     <label for="location" class="form-label">Location</label>
-                    <input class="form-control" id="location" placeholder="Golden Gardens">
+                    <input class="form-control" id="location" value="{{eventUpdate.location}}">
                 </div>
                 <div class="mb-3">
                     <label for="formFile" class="form-label">Upload Image</label>
@@ -20,7 +20,8 @@
                 <div class="row mb-3">
                     <div class="col">
                         <label for="startDate" class="form-label">Start Date</label>
-                        <input type="text" class="form-control" placeholder="Click to select" aria-label="startDate" id="startDate">
+                        <input type="text" class="form-control" value="{{eventUpdate.date}}" aria-label="startDate"
+                            id="startDate">
                     </div>
                     <div class="col">
                         <label for="startTime" class="form-label">Start Time</label>
@@ -31,7 +32,8 @@
                 <div class="row mb-3">
                     <div class="col">
                         <label for="endDate" class="form-label">End Date</label>
-                        <input type="text" class="form-control" placeholder="Click to select" aria-label="endDate" id="endDate">
+                        <input type="text" class="form-control" placeholder="Click to select" aria-label="endDate"
+                            id="endDate">
                     </div>
                     <div class="col">
                         <label for="endTime" class="form-label">End Time</label>
@@ -41,12 +43,14 @@
 
                 <div class="mb-3">
                     <label for="backpackItems" class="form-label">Backpack Items</label>
-                    <input class="form-control" id="backpackItems" placeholder="Umbrella, towels, etc.">
+                    <input class="form-control" id="backpackItems" value="{{#eventUpdate.items}}{{item_name}}, {{/eventUpdate.items}}">
+                    
                 </div>
 
                 <div class="mb-3">
                     <label for="startDate" class="form-label">Event Description</label>
-                    <textarea class="form-control" id="eventDescription" rows="6" placeholder="More details..."></textarea>
+                    <textarea class="form-control" id="eventDescription" rows="6"
+                        placeholder="More details..."></textarea>
                 </div>
 
                 <div class="d-grid gap-2 my-3">
