--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,7 +9,7 @@
             <h5 class="text-center">{{date}}</h5>
             <p class="text-center">{{location}}</p>
             <div class="d-grid gap-2 mt-3 mb-1">
-                <button class="btn btn-dark" id="details">Event Details</button>
+                <a class="btn btn-dark" href="/eventbyid/{{id}}">Event Details</a>
             </div>
         </div>
     </div>
