add helper for date display

--- a/views/eventbyid.handlebars
+++ b/views/eventbyid.handlebars
@@ -9,8 +9,10 @@
                 <div class="col pt-2">
                     <h5>Location:</h5>
                     <p>{{location}}</p>
-                    <h5>Date:</h5>
-                    <p>{{start_date}}</p>
+                    <h5>Starts:</h5>
+                    <p>{{start_time}}</p>
+                    <h5>Ends:</h5>
+                    <p>{{end_time}}</p>
                     <h5>Description:</h5>
                     <p>{{description}}</p>
                     <h5>Event Host:</h5>
