use format_time helper

--- a/views/eventbyid.handlebars
+++ b/views/eventbyid.handlebars
@@ -10,9 +10,9 @@
                     <h5>Location:</h5>
                     <p>{{location}}</p>
                     <h5>Starts:</h5>
-                    <p>{{start_time}}</p>
+                    <p>{{format_time start_time}}</p>
                     <h5>Ends:</h5>
-                    <p>{{end_time}}</p>
+                    <p>{{format_time end_time}}</p>
                     <h5>Description:</h5>
                     <p>{{description}}</p>
                     <h5>Event Host:</h5>
