--- a/views/changepassword.handlebars
+++ b/views/changepassword.handlebars
@@ -11,8 +11,12 @@
                     <input type="password" class="form-control" id="newPassword" placeholder="New Password">
                     <label for="floatingPassword">New Password</label>
                 </div>
+                <div class="form-floating">
+                    <input type="password" class="form-control" id="checkNewPassword" placeholder="New Password">
+                    <label for="floatingPassword">Retype New Password</label>
+                </div>
                 <div class="d-grid gap-2 my-3">
-                    <button class="btn btn-dark" id="newPassBtn">Log In</button>
+                    <button class="btn btn-dark" id="newPassBtn" value={{user.id}}>Change Password</button>
                 </div>
             </form>
         </div>
