--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,13 +7,16 @@
     <title>BYO Backpack</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid px-4 pt-3 pb-1">
-                <a class="navbar-brand" href="#">BYO Backpack</a>
+        <nav class="navbar navbar-expand-lg navbar-dark custom-nav">
+            <div class="container-fluid px-4 py-1">
+                <a class="navbar-brand" href="/">
+                    <img src="/images/BYOB_Logo_Crop.png"  alt="Bring Your Own Backpack Logo" width="500" height="115">
+                </a>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
