--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,8 +1,8 @@
-profile!!
-Welcome{{user.user_name}}
+Welcome {{user.user_name}}
 <button id="changePssword">Change Password</button>
-{{#each events as | event|}}
 
+<h1>Public Events</h1>
+{{#each publicEvents as |event|}}
 <div>
     <div>
         <div class=" ">
@@ -32,11 +32,53 @@ Welcome{{user.user_name}}
     <div>
         {{event.location}}
     </div>
-{{event.event_name}}
-{{event.id}}
+    {{event.event_name}}
+    {{event.id}}
     <button class="deleteBtn" value={{event.id}}>Delete</button>
     <button class="updateBtn" value={{event.id}}>update</button>
-
+    <button class="privBtn" value={{event.id}}>Make Private</button>
+    <a class="btn btn-dark" href="/eventbyid/{{id}}">Event Details</a>
 </div>
 {{/each}}
+<hr><hr>
+<h1>Private Events</h1>
+{{#each privateEvents as |event|}}
+<div>
+    <div>
+        <div class=" ">
+            <h3> {{event.event_name}}</h3>
+        </div>
+        <div>
+            Created by:
+            {{event.creator.user_name}}
+        </div>
+        <div>
+            Items:
+            {{#items}}
+            <ul>
+                <li>{{item_name}}</li>
+            </ul>
+            {{/items}}
+        </div>
+        <div>
+            Attendee:
+            {{#attendees}}
+            <ul>
+                <li>{{user_name}}</li>
+            </ul>
+            {{/attendees}}
+        </div>
+    </div>
+    <div>
+        {{event.location}}
+    </div>
+    {{event.event_name}}
+    {{event.id}}
+    <button class="deleteBtn" value={{event.id}}>Delete</button>
+    <button class="updateBtn" value={{event.id}}>update</button>
+    <button class="pubBtn" value={{event.id}}>Make Public</button>
+    <a class="btn btn-dark" href="/eventbyid/{{id}}">Event Details</a>
+</div>
+{{/each}}
+
 <script src="/js/eventAction.js"></script>
