added cloudinary function in front end JS and create an event page functional

--- a/views/createEvent.handlebars
+++ b/views/createEvent.handlebars
@@ -3,7 +3,7 @@
     <div class="card col-12 my-5">
         <div class="card-body">
             <h2 class="card-title  mt-2 mb-3">Create a New Event</h2>
-            <form>
+            <form id="newEventForm">
                 <div class="mb-3">
                     <label for="eventName" class="form-label">Event Name</label>
                     <input class="form-control" id="eventName" placeholder="Beach Bonfire">
@@ -12,30 +12,24 @@
                     <label for="location" class="form-label">Location</label>
                     <input class="form-control" id="location" placeholder="Golden Gardens">
                 </div>
+                <div>
+                     <img id="uploadedimage" src=""></img> 
+                </div>
                 <div class="mb-3">
-                    <label for="formFile" class="form-label">Upload Image</label>
-                    <input class="form-control" type="file" id="formFile">
+                    <button for="formFile" id="upload_widget" class="form-label, cloudinary-button">Upload Image</button>
                 </div>
 
                 <div class="row mb-3">
                     <div class="col">
                         <label for="startDate" class="form-label">Start Date</label>
-                        <input type="text" class="form-control" placeholder="Click to select" aria-label="startDate" id="startDate">
-                    </div>
-                    <div class="col">
-                        <label for="startTime" class="form-label">Start Time</label>
-                        <input type="text" class="form-control" placeholder="" aria-label="startTime" id="startDate">
+                        <input type="datetime-local" class="form-control" placeholder="Click to select" aria-label="startDate" id="startDate">
                     </div>
                 </div>
 
                 <div class="row mb-3">
                     <div class="col">
                         <label for="endDate" class="form-label">End Date</label>
-                        <input type="text" class="form-control" placeholder="Click to select" aria-label="endDate" id="endDate">
-                    </div>
-                    <div class="col">
-                        <label for="endTime" class="form-label">End Time</label>
-                        <input type="text" class="form-control" placeholder="" aria-label="endTime" id="endTime">
+                        <input type="datetime-local" class="form-control" placeholder="Click to select" aria-label="endDate" id="endDate">
                     </div>
                 </div>
 
@@ -45,7 +39,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="startDate" class="form-label">Event Description</label>
+                    <label for="eventDescription" class="form-label">Event Description</label>
                     <textarea class="form-control" id="eventDescription" rows="6" placeholder="More details..."></textarea>
                 </div>
 
@@ -56,3 +50,5 @@
         </div>
     </div>
 </div>
+<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+<script src="/js/createEvent.js"></script>
