--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
                     </li>
                     {{#if user.logged_in}}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Create Event</a>
+                        <a class="nav-link" href="/create_an_event">Create Event</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/profile">Profile</a>
