--- a/views/eventbyid.handlebars
+++ b/views/eventbyid.handlebars
@@ -31,44 +31,11 @@
                 <h4 class="text-center mb-3">Backpack Items</h4>
                 <div class="d-flex justify-content-center">
                     <hr class="my-2">
-                        {{#each items}}
-                        <div class="form-check form-check-inline">
-                            {{!-- {{#if isBroughtByUser}} --}}
-                            <input class="form-check-input" type="checkbox" id={{id}} value={{item_name}} {{#if owner_id}} {{#if isBroughtByUser}} checked {{else}} checked disabled {{/if}}{{/if}}>
-                            <label class="form-check-label" for={{id}}>{{item_name}}</label>
-
-                            {{!-- <input class="form-check-input" type="checkbox" id={{id}} value={{item_name}} {{#if isBroughtByUser}}checked{{/if}}>
-                            <label class="form-check-label" for={{id}}>{{item_name}}</label> --}}
-                            {{!-- {{/if}} --}}
-                            {{!-- {{else owner_id}}
-                            <input class="form-check-input" type="checkbox" id={{id}} value={{item_name}} checked disabled>
-                            <label class="form-check-label" for={{id}}>{{item_name}}, claimed by {{user.user_name}}</label>
-                            {{/if}} --}}
-                        </div>
-                    
-                    <hr class="mt-4 mb-3">
-                    {{/each}}
-                </div>
-            </div>
-            <div class="row my-5">
-                <h4 class="text-center mb-3">Backpack Items</h4>
-                <div class="d-flex flex-column text-center">
-                    <hr class="my-2">
                     {{#each items}}
-                    <p>{{../user.isGoing}}</p>
-                    <p class="m-0">{{item_name}} ---
-                        {{#unless user.user_name}}
-                        {{#if ../user.isGoing}}
-                        <button class="btn btn-secondary brgBtn" value={{id}}>I got this</button>
-                        {{/if}}
-                        {{else}}
-                        {{user.user_name}}
-                        {{/unless}}
-                        {{#if isBroughtByUser}}
-                        <button class="btn btn-secondary cantBrgBtn" value={{id}}>No longer got this</button>
-                        {{/if}}
-                    </p>
-                    <hr class="mt-4 mb-3">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input claimCheck" type="checkbox" id={{id}} value={{item_name}} {{#if owner_id}} {{#if isBroughtByUser}} checked {{else}} checked disabled {{/if}}{{/if}}>
+                        <label class="form-check-label" for={{id}}>{{item_name}}{{#if owner_id}}{{#if isBroughtByUser}}{{else}}, claimed by{{user.user_name}}{{/if}}{{/if}}</label>
+                    </div>
                     {{/each}}
                 </div>
             </div>
