--- a/views/updateEvent.handlebars
+++ b/views/updateEvent.handlebars
@@ -2,7 +2,7 @@
     <h1>Welcome, {{user.user_name}}!</h1>
     <div class="card col-12 my-5">
         <div class="card-body">
-            <h2 class="card-title  mt-2 mb-3">Create a New Event</h2>
+            <h2 class="card-title  mt-2 mb-3">Update Event</h2>
             <form>
                 <div class="mb-3">
                     <label for="eventName" class="form-label">Event Name</label>
@@ -17,46 +17,70 @@
                     <input class="form-control" type="file" id="formFile">
                 </div>
 
-                <div class="row mb-3">
+                {{!-- <div class="row mb-3">
                     <div class="col">
                         <label for="startDate" class="form-label">Start Date</label>
-                        <input type="text" class="form-control" value="{{eventUpdate.date}}" aria-label="startDate"
-                            id="startDate">
-                    </div>
-                    <div class="col">
+                        <input type="text" class="form-control" value="{{format_time eventUpdate.start_time}}"
+                            aria-label="startDate" id="startDate">
+                    </div>--}}
+                    <div class="row mb-3" <div class="col">
                         <label for="startTime" class="form-label">Start Time</label>
-                        <input type="text" class="form-control" placeholder="" aria-label="startTime" id="startDate">
+                        <input type="text" class="form-control" value="{{format_time eventUpdate.start_time}}"
+                            aria-label="startTime" id="startTime">
                     </div>
-                </div>
-
-                <div class="row mb-3">
-                    <div class="col">
-                        <label for="endDate" class="form-label">End Date</label>
-                        <input type="text" class="form-control" placeholder="Click to select" aria-label="endDate"
-                            id="endDate">
+                    {{!--
+                    <div class="row mb-3">
+                        <div class="col">
+                            <label for="endDate" class="form-label">End Date</label>
+                            <input type="text" class="form-control" placeholder="Click to select" aria-label="endDate"
+                                id="endDate">
+                        </div> --}}
+                        <div class="col">
+                            <label for="endTime" class="form-label">End Time</label>
+                            <input type="text" class="form-control" value="{{format_time eventUpdate.end_time}}"
+                                aria-label="endTime" id="endTime">
+                        </div>
                     </div>
-                    <div class="col">
-                        <label for="endTime" class="form-label">End Time</label>
-                        <input type="text" class="form-control" placeholder="" aria-label="endTime" id="endTime">
+
+                    <div class="mb-3">
+                        <label for="backpackItems" class="form-label">Backpack Items</label>
+                        <input class="form-control" id="backpackItems"
+                            value="{{#eventUpdate.items}}{{item_name}}, {{/eventUpdate.items}}">
+
                     </div>
-                </div>
+                    <div>
+                        <label for="eventType" class="form-label">Event Type</label>
+                        <div>
+                            
+                            {{#if eventUpdate.public}}
+                            {{eventUpdate.public}}
+                            <input type="radio" name="eventType" value="1" id="public" checked="checked">
+                            <label for="public">Public </label>
+                            <input type="radio" name="eventType" value="0" id="private">
+                            <label for="private">Private</label>
+                            {{else}}
+                            <h1>test</h1>
+                            <input type="radio" name="eventType" value="1" id="public">
+                            <label for="public">Public </label>
+                            <input type="radio" name="eventType" value="0" id="private" checked="checked">
+                            <label for="private">Private</label>
+                            {{/if}}
+                        </div>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="backpackItems" class="form-label">Backpack Items</label>
-                    <input class="form-control" id="backpackItems" value="{{#eventUpdate.items}}{{item_name}}, {{/eventUpdate.items}}">
-                    
-                </div>
+                    <div class="mb-3">
+                        <label for="startDate" class="form-label">Event Description</label>
+                        <textarea class="form-control" id="eventDescription" rows="6"
+                            placeholder="More details...">{{eventUpdate.description}}</textarea>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="startDate" class="form-label">Event Description</label>
-                    <textarea class="form-control" id="eventDescription" rows="6"
-                        placeholder="More details..."></textarea>
-                </div>
-
-                <div class="d-grid gap-2 my-3">
-                    <button type="button" class="btn btn-dark" id="newEventSubmit">Update</button>
-                </div>
+                    <div class="d-grid gap-2 my-3">
+                        <button type="button" class="btn btn-dark" id="updateEventSubmit"
+                            value={{eventUpdate.id}}>Update</button>
+                    </div>
             </form>
         </div>
     </div>
 </div>
+
+<script src="/js/updateEvent.js"></script>
