--- a/views/createEvent.handlebars
+++ b/views/createEvent.handlebars
@@ -13,23 +13,26 @@
                     <input class="form-control" id="location" placeholder="Golden Gardens">
                 </div>
                 <div>
-                     <img id="uploadedimage" src=""></img> 
+                    <img id="uploadedimage" src=""></img>
                 </div>
                 <div class="mb-3">
-                    <button for="formFile" id="upload_widget" class="form-label, cloudinary-button">Upload Image</button>
+                    <button for="formFile" id="upload_widget" class="form-label, cloudinary-button">Upload
+                        Image</button>
                 </div>
 
                 <div class="row mb-3">
                     <div class="col">
                         <label for="startDate" class="form-label">Start Date</label>
-                        <input type="datetime-local" class="form-control" placeholder="Click to select" aria-label="startDate" id="startDate">
+                        <input type="datetime-local" class="form-control" placeholder="Click to select"
+                            aria-label="startDate" id="startDate">
                     </div>
                 </div>
 
                 <div class="row mb-3">
                     <div class="col">
                         <label for="endDate" class="form-label">End Date</label>
-                        <input type="datetime-local" class="form-control" placeholder="Click to select" aria-label="endDate" id="endDate">
+                        <input type="datetime-local" class="form-control" placeholder="Click to select"
+                            aria-label="endDate" id="endDate">
                     </div>
                 </div>
 
@@ -39,8 +42,19 @@
                 </div>
 
                 <div class="mb-3">
+                    <label for="eventType" class="form-label">Event Type</label>
+                    <div>
+                        <input type="radio" name="eventType" value="1" id="public" checked="checked">
+                        <label for="public">Public </label>
+                        <input type="radio" name="eventType" value="0" id="private">
+                        <label for="private">Private</label>
+                    </div>
+                </div>
+
+                <div class="mb-3">
                     <label for="eventDescription" class="form-label">Event Description</label>
-                    <textarea class="form-control" id="eventDescription" rows="6" placeholder="More details..."></textarea>
+                    <textarea class="form-control" id="eventDescription" rows="6"
+                        placeholder="More details..."></textarea>
                 </div>
 
                 <div class="d-grid gap-2 my-3">
@@ -50,5 +64,5 @@
         </div>
     </div>
 </div>
-<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 <script src="/js/createEvent.js"></script>
