--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -5,8 +5,10 @@
             <hr>
             <div class="d-flex justify-content-center">
                 <button class="btn btn-dark m-3" id="changePssword">Change Password</button>
-                <button class="btn btn-dark m-3"><a href="#publicEvents" class="text-reset text-decoration-none">My Public Events</a></button>
-                <button class="btn btn-dark m-3"><a href="#privateEvents" class="text-reset text-decoration-none">My Private Events</a></button>
+                <button class="btn btn-dark m-3"><a href="#publicEvents" class="text-reset text-decoration-none">My
+                        Public Events</a></button>
+                <button class="btn btn-dark m-3"><a href="#privateEvents" class="text-reset text-decoration-none">My
+                        Private Events</a></button>
             </div>
         </div>
     </div>
@@ -18,6 +20,8 @@
     <div class="card col-12 col-lg-5 mb-3 mx-3">
         <div class="card-body">
             <h2 class="card-title my-4 text-center">{{event.event_name}}</h2>
+            <hr>
+            <img src={{picture_path}} class="card-img-top" width="500" height="360" alt={{picture_path}}>
             <hr>
             <div class="row mb-3">
                 <div class="mb-2">
@@ -33,7 +37,6 @@
                     <p class="d-inline">{{format_time end_time}}</p>
                 </div>
             </div>
-            {{!-- <hr> --}}
             <div class="row">
                 <div class="col border m-2 p-2">
                     <h5>Backpack:</h5>
@@ -52,18 +55,18 @@
                     </ul>
                 </div>
             </div>
-        
+
             <div class="row">
                 <div class="col">
                     <div class="d-grid gap-2 my-3">
-                        <button class="btn btn-dark m-1"><a href="/eventbyid/{{id}}" class="text-reset text-decoration-none">View Details</a></button>
-                        <button class="btn btn-dark m-1" id="privBtn" value={{event.id}}>Make Private</button>
+                        <a href="/eventbyid/{{id}}" class="btn btn-dark m-1">View Details</a>
+                        <button class="btn btn-dark m-1 privBtn" value={{event.id}}>Make Private</button>
                     </div>
                 </div>
                 <div class="col">
                     <div class="d-grid gap-2 my-3">
-                        <button class="btn btn-dark m-1" id="updateBtn" value={{event.id}}>Update Details</button>
-                        <button class="btn btn-dark m-1" id="deleteBtn" value={{event.id}}>Delete Event</button>
+                        <button class="btn btn-dark m-1 updateBtn" value={{event.id}}>Update Details</button>
+                        <button class="btn btn-dark m-1 deleteBtn" value={{event.id}}>Delete Event</button>
                     </div>
                 </div>
             </div>
@@ -79,6 +82,8 @@
         <div class="card-body">
             <h2 class="card-title my-4 text-center">{{event.event_name}}</h2>
             <hr>
+            <img src={{picture_path}} class="card-img-top" width="500" height="360" alt={{picture_path}}>
+            <hr>
             <div class="row mb-3">
                 <div class="mb-2">
                     <h5 class="d-inline">Location:</h5>
@@ -93,7 +98,6 @@
                     <p class="d-inline">{{format_time end_time}}</p>
                 </div>
             </div>
-            {{!-- <hr> --}}
             <div class="row">
                 <div class="col border m-2 p-2">
                     <h5>Backpack:</h5>
@@ -112,18 +116,18 @@
                     </ul>
                 </div>
             </div>
-        
+
             <div class="row">
                 <div class="col">
                     <div class="d-grid gap-2 my-3">
-                        <button class="btn btn-dark m-1"><a href="/eventbyid/{{id}}" class="text-reset text-decoration-none">View Details</a></button>
-                        <button class="btn btn-dark m-1" id="pubBtn" value={{event.id}}>Make Public</button>
+                        <a href="/eventbyid/{{id}}" class="btn btn-dark m-1">View Details</a>
+                        <button class="btn btn-dark m-1 pubBtn" value={{event.id}}>Make Public</button>
                     </div>
                 </div>
                 <div class="col">
                     <div class="d-grid gap-2 my-3">
-                        <button class="btn btn-dark m-1" id="updateBtn" value={{event.id}}>Update Details</button>
-                        <button class="btn btn-dark m-1" id="deleteBtn" value={{event.id}}>Delete Event</button>
+                        <button class="btn btn-dark m-1 updateBtn" value={{event.id}}>Update Details</button>
+                        <button class="btn btn-dark m-1 deleteBtn" value={{event.id}}>Delete Event</button>
                     </div>
                 </div>
             </div>
@@ -173,7 +177,8 @@
     <a class="btn btn-dark" href="/eventbyid/{{id}}">Event Details</a>
 </div>
 {{/each}}
-<hr><hr>
+<hr>
+<hr>
 <h1>Private Events</h1>
 {{#each privateEvents as |event|}}
 <div>
@@ -213,4 +218,3 @@
     <a class="btn btn-dark" href="/eventbyid/{{id}}">Event Details</a>
 </div>
 {{/each}} --}}
-
