--- a/views/eventbyid.handlebars
+++ b/views/eventbyid.handlebars
@@ -4,7 +4,7 @@
             <h1 class="card-title my-4 text-center">{{event_name}}</h1>
             <div class="row pt-1">
                 <div class="col d-flex justify-content-end">
-                    <img src="http://placekitten.com/500/400" alt="">
+                    <img src={{picture_path}} width="500" height="360" alt={{picture_path}}>
                 </div>
                 <div class="col pt-2">
                     <div class="mb-2">
