confirmation for delete event

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -66,7 +66,7 @@
                 <div class="col">
                     <div class="d-grid gap-2 my-3">
                         <button class="btn btn-dark m-1 updateBtn" value={{event.id}}>Update Details</button>
-                        <button class="btn btn-dark m-1 deleteBtn" value={{event.id}}>Delete Event</button>
+                        <button class="btn btn-danger m-1 deleteBtn" value={{event.id}}>Delete Event</button>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                 <div class="col">
                     <div class="d-grid gap-2 my-3">
                         <button class="btn btn-dark m-1 updateBtn" value={{event.id}}>Update Details</button>
-                        <button class="btn btn-dark m-1 deleteBtn" value={{event.id}}>Delete Event</button>
+                        <button class="btn btn-danger m-1 deleteBtn" value={{event.id}}>Delete Event</button>
                     </div>
                 </div>
             </div>
