--- a/views/changepassword.handlebars
+++ b/views/changepassword.handlebars
@@ -17,6 +17,10 @@
                 </div>
                 <div class="d-grid gap-2 my-3">
                     <button class="btn btn-dark" id="newPassBtn" value={{user.id}}>Change Password</button>
+                    
+                </div>
+                <div class="d-grid gap-2 my-3">
+                    <button class="btn btn-dark" id="cancelpass"  >Cancel</button>
                 </div>
             </form>
         </div>
