add user obj in createevent route

--- a/views/createEvent.handlebars
+++ b/views/createEvent.handlebars
@@ -1,5 +1,5 @@
 <div class="row mt-5">
-    <h1>Welcome, {{username}}!</h1>
+    <h1>Welcome, {{user.user_name}}!</h1>
     <div class="card col-12 my-5">
         <div class="card-body">
             <h2 class="card-title  mt-2 mb-3">Create a New Event</h2>
