can invite people now

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -72,6 +72,9 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <a href="/profile/invite/{{id}}" class="btn btn-dark m-1">Invite People</a>
+            </div>
 
         </div>
     </div>
@@ -132,6 +135,9 @@
                         <button class="btn btn-danger m-1 deleteBtn" value={{event.id}}>Delete Event</button>
                     </div>
                 </div>
+            </div>
+            <div class="row">
+                <a href="/profile/invite/{{id}}" class="btn btn-dark m-1">Invite People</a>
             </div>
 
         </div>
