--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,14 @@
-<h1>Upcoming Events</h1>
+<div class="row">
+    <div class="col">
+        <h1>Upcoming Events</h1>
+    </div>
+    <div class="col d-flex justify-content-end">
+        <form class="d-inline-flex">
+            <input type="search" class="form-control m-2" placeholder="Location" id="searchInput">
+            <button class="btn btn-dark my-2" type="submit" id="searchBtn">Search</button>
+        </form>
+    </div>
+</div>
 <hr>
 <div class="row d-flex justify-content-center">
     {{#each event}}
